# logic

./: .gitignore  README.md  logic.db  pyproject.toml
app/: __init__.py  database.py  main.py
app/tco/: __init__.py  core.py  crud.py  models.py  router.py  schemas.py
examples/standalone/: README.md  tco.py  test_tco.py
examples/standalone/tco/: README.md  test_tco.py
